--- a/content/posts/2017-02-07-blockchain-101.md
+++ b/content/posts/2017-02-07-blockchain-101.md
@@ -4,12 +4,11 @@ categories = ["Computer Science", "Finance", "FinTec", "Technology", "Video"]
 date = "2017-02-07T09:00:36+00:00"
 tags = ["Blockchain", "FinTech", "tutorial", "video"]
 title = "Blockchain 101"
-type = "post"
 url = "/2017/02/blockchain-101/"
-
 +++
+
 Have you ever wondered how the <a href="https://en.wikipedia.org/wiki/Blockchain_(database)" target="_blank">Blockchain</a> works? I found an interesting visual illustration about Blockchains by <a href="https://andersbrownworth.com/" target="_blank">Anders Brownworth</a>. Anders is a coder at <a href="https://www.circle.com" target="_blank">Circle</a>, a FinTech company based in the US.
 
-
+{{< youtube _160oMzblY8 >}}
 
 (via <a href="https://anders.com/blockchain/" target="_blank">anders.com</a> and <a href="https://anders.com/blockchain/" target="_blank">anders.com/blockchain</a>)
