Update istio post

--- a/content/posts/2019-01-25-istio.md
+++ b/content/posts/2019-01-25-istio.md
@@ -3,7 +3,7 @@ date = 2019-01-25T21:10:00+01:00
 title = "Istio"
 slug = "istio" 
 tags = ["istio", "kubernetes", "videos", "learning"]
-categories = ["istio", "kubernetes"]
+categories = ["istio", "kubernetes", "videos"]
 
 +++
 
@@ -26,3 +26,5 @@ I am learning how to use istio and here is a short list of useful resources to k
 
 {{< youtube s4_r626pUOg >}}
 **Istio - Fault Injection Testing**
+
+I hope you find something useful in these resources.
