refactor and update posts

--- a/content/posts/2019-01-25-istio.md
+++ b/content/posts/2019-01-25-istio.md
@@ -2,29 +2,35 @@
 date = 2019-01-25T21:10:00+01:00
 title = "Istio"
 slug = "istio" 
+url = "/2019/01/istio"
 tags = ["istio", "kubernetes", "videos", "learning"]
 categories = ["istio", "kubernetes", "videos"]
 
 +++
 
-I am learning how to use istio and here is a short list of useful resources to keep you going:
+[Istio](https://istio.io/) has gained lots of traction in the Kubernetes space. Here is a compiled list of interesting talks on Istio. 
 
+Kuodos to [Lachlan Evenson](https://twitter.com/lachlanevenson) for creating this content:
+
+## Setting Sail with Istio
+{{< youtube wq1nlJNvy1w >}}
+
+## Istio - up and running by Lachlan Evenson
 {{< youtube ePwd5bK2Cuo >}}
-**Istio - up and running by Lachlan Evenson**
 
+## Istio - adding services to the mesh by Lachlan Evenson
 {{< youtube iNrbdq_Spo4 >}}
-**Istio - adding services to the mesh by Lachlan Evenson**
 
+## Istio - Working with Ingress
 {{< youtube 1w7UP2TAaAI >}}
-**Istio - Working with Ingress**
 
+## Istio - Working with Egress
 {{< youtube by49wVl32Rg >}}
-**Istio - Working with Egress**
 
+## Istio - Request Routing
 {{< youtube kP5xoXaJIpY >}}
-**Istio - Request Routing**
 
+## Istio - Fault Injection Testing
 {{< youtube s4_r626pUOg >}}
-**Istio - Fault Injection Testing**
 
 I hope you find something useful in these resources.
