update draft article

--- a/content/posts/2019-01-14-SPRINT.md
+++ b/content/posts/2019-01-14-SPRINT.md
@@ -4,6 +4,7 @@ title = "SPRINT - How to validate ideas..."
 slug = "sprint-and-how-to-validate-ideas" 
 tags = ["sprint", "startups", "ideas", "validation", "prototyping", "video"]
 categories = ["entrepreneurship", "videos"]
+draft = true
 
 +++
 
